--- a/views/createInt.ejs
+++ b/views/createInt.ejs
@@ -5,12 +5,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container>"
-<h1>Add User</h1>
-<form action="/user/list" method="post">
-  <input type="text" placeholder="name" name="name">
-  <input type="text" placeholder="username" name="username">
-  <input type="text" placeholder="password" name="password">
+<div class="container">
+<h1>Add Interest</h1>
+<form action="/interest/list" method="post">
+  <input type="text" placeholder="your interest" name="interest">
   <button class="btn btn-primary">SUBMIT</button>
 </form>
 </div>
