tambah fitur hook

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <title>Login</title>
   </head>
   <body>
-    <form class="" action="/auth/login" method="post">
+    <form class="" action="/user/login" method="post">
       <input type="text" name="username" placeholder="username">
       <input type="text" name="password" placeholder="password">
       <button>log in</button>
