--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div class="container>"
-<h1>Add User</h1>
+<h1>Register Your Account</h1>
 <form action="/user/list" method="post">
   <input type="text" placeholder="name" name="name">
   <input type="text" placeholder="username" name="username">
-  <input type="text" placeholder="password" name="password">
+  <input type="password" placeholder="password" name="password">
   <button class="btn btn-primary">SUBMIT</button>
 </form>
 </div>
