--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,16 @@
 <html>
   <head>
-    <title>INDEX</title>
+    <title>Login</title>
   </head>
   <body>
-    <h1>INDEX</h1>
-    <a href="/user/list">User</a>
-    <a href="/interest/list">Interest</a>
-    <a href="/place/list">Place</a>
+    <h1> LOGIN </h1>
+    <form class="" action="/user/login" method="post">
+      <input type="text" name="username" placeholder="username">
+      <input type="text" name="password" placeholder="password">
+      <button>log in</button>
+    </form>
+    <a href="/user/createuser">Register</a>
+    <!-- <a href="/interest/list">Interest</a>
+    <a href="/place/list">Place</a> -->
   </body>
 </html>
