--- a/views/interest.ejs
+++ b/views/interest.ejs
@@ -7,7 +7,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>INTEREST PAGE</h1>
+    <h1>Please choose ur interest!</h1>
     <h1><a href = "/interest/createInt"> Add Interest </a></h1>
     <table class="table table-bordered">
       <thead>
